# vectorcade-shared

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: ai_agent_instructions.md  architecture.md  design.md  learnings.md  plan.md  prd.md  status.md
vectorcade-core/: Cargo.toml
vectorcade-core/src/: color.rs  lib.rs
vectorcade-core/src/rng/: ext.rs  mod.rs  xorshift.rs
vectorcade-core/tests/: rng_tests.rs
vectorcade-math/: Cargo.toml
vectorcade-math/src/: helpers.rs  lib.rs  projection.rs  transform.rs
vectorcade-math/src/collision/: aabb.rs  circle.rs  mod.rs
vectorcade-math/tests/: collision_tests.rs  projection_tests.rs
vectorcade-shared/: Cargo.toml
vectorcade-shared/src/: collision.rs  color.rs  draw.rs  font.rs  game.rs  input.rs  lib.rs  math.rs  projectile.rs  rng.rs
vectorcade-shared/src/game/: coords.rs  ctx.rs  mod.rs
vectorcade-shared/tests/: math_smoke.rs  projectile_tests.rs
