[package]
name = "vectorcade-shared"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared core types/traits for VectorCade (multi-repo DAG)."

[dependencies]
# Keep deps minimal & portable
glam = { version = "0.27", default-features = false, features = ["libm"] }

[dev-dependencies]
approx = "0.5"
