[package]
name = "vectorcade-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared API contracts for VectorCade (Game, Input, Draw, Font)."

[dependencies]
glam.workspace = true
vectorcade-core.workspace = true
vectorcade-math.workspace = true

[dev-dependencies]
approx = "0.5"
